Erfolgreiche Integration mehrerer Sensoren --> Problem Zyklenerkennung erkennt nichts